--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 FunctionImplementations = "7c7cc465-9c6a-495f-bdd1-f42428e86d0c"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -11,6 +12,7 @@ FunctionImplementations = {path = ".."}
 [compat]
 Aqua = "0.8"
 FunctionImplementations = "0.2"
+LinearAlgebra = "1.10"
 SafeTestsets = "0.1"
 Suppressor = "0.2"
 Test = "1.10"
