--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,16 @@
 name = "FunctionImplementations"
 uuid = "7c7cc465-9c6a-495f-bdd1-f42428e86d0c"
 authors = ["ITensor developers <support@itensor.org> and contributors"]
-version = "0.2.0"
+version = "0.2.1"
+
+[weakdeps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[extensions]
+FunctionImplementationsLinearAlgebraExt = "LinearAlgebra"
 
 [compat]
+LinearAlgebra = "1.10"
 julia = "1.10"
 
 [workspace]
