--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,8 @@
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 FunctionImplementations = "7c7cc465-9c6a-495f-bdd1-f42428e86d0c"
+JLArrays = "27aeb0d3-9eb9-45fb-866b-73c2ecf80fcb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
@@ -10,8 +12,10 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 FunctionImplementations = {path = ".."}
 
 [compat]
+Adapt = "4"
 Aqua = "0.8"
 FunctionImplementations = "0.3"
+JLArrays = "0.3"
 LinearAlgebra = "1.10"
 SafeTestsets = "0.1"
 Suppressor = "0.2"
