--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,15 @@ authors = ["ITensor developers <support@itensor.org> and contributors"]
 version = "0.3.1"
 
 [weakdeps]
+BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [extensions]
+FunctionImplementationsBlockArraysExt = "BlockArrays"
 FunctionImplementationsLinearAlgebraExt = "LinearAlgebra"
 
 [compat]
+BlockArrays = "1.4"
 LinearAlgebra = "1.10"
 julia = "1.10"
 
