--- a/Project.toml
+++ b/Project.toml
@@ -5,14 +5,17 @@ version = "0.3.1"
 
 [weakdeps]
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [extensions]
 FunctionImplementationsBlockArraysExt = "BlockArrays"
+FunctionImplementationsFillArraysExt = "FillArrays"
 FunctionImplementationsLinearAlgebraExt = "LinearAlgebra"
 
 [compat]
 BlockArrays = "1.4"
+FillArrays = "1.15"
 LinearAlgebra = "1.10"
 julia = "1.10"
 
