--- a/test/Project.toml
+++ b/test/Project.toml
@@ -2,6 +2,7 @@
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 FunctionImplementations = "7c7cc465-9c6a-495f-bdd1-f42428e86d0c"
 JLArrays = "27aeb0d3-9eb9-45fb-866b-73c2ecf80fcb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -16,6 +17,7 @@ FunctionImplementations = {path = ".."}
 Adapt = "4"
 Aqua = "0.8"
 BlockArrays = "1.4"
+FillArrays = "1.15"
 FunctionImplementations = "0.3"
 JLArrays = "0.3"
 LinearAlgebra = "1.10"
