Add permuteddims definitions for StridedViews and more FillArrays

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -7,6 +7,7 @@ FunctionImplementations = "7c7cc465-9c6a-495f-bdd1-f42428e86d0c"
 JLArrays = "27aeb0d3-9eb9-45fb-866b-73c2ecf80fcb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+StridedViews = "4db3bf67-4bd7-4b4e-b153-31dc3fb37143"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
@@ -22,5 +23,6 @@ FunctionImplementations = "0.3"
 JLArrays = "0.3"
 LinearAlgebra = "1.10"
 SafeTestsets = "0.1"
+StridedViews = "0.4"
 Suppressor = "0.2"
 Test = "1.10"
