--- a/Project.toml
+++ b/Project.toml
@@ -1,22 +1,25 @@
 name = "FunctionImplementations"
 uuid = "7c7cc465-9c6a-495f-bdd1-f42428e86d0c"
 authors = ["ITensor developers <support@itensor.org> and contributors"]
-version = "0.3.1"
+version = "0.3.2"
 
 [weakdeps]
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StridedViews = "4db3bf67-4bd7-4b4e-b153-31dc3fb37143"
 
 [extensions]
 FunctionImplementationsBlockArraysExt = "BlockArrays"
 FunctionImplementationsFillArraysExt = "FillArrays"
 FunctionImplementationsLinearAlgebraExt = "LinearAlgebra"
+FunctionImplementationsStridedViewsExt = "StridedViews"
 
 [compat]
 BlockArrays = "1.4"
 FillArrays = "1.15"
 LinearAlgebra = "1.10"
+StridedViews = "0.4.1"
 julia = "1.10"
 
 [workspace]
