Add TensorAlgebra as a downstream test

--- a/.github/workflows/IntegrationTest.yml
+++ b/.github/workflows/IntegrationTest.yml
@@ -24,6 +24,7 @@ jobs:
            - 'KroneckerArrays'
            - 'NamedDimsArrays'
            - 'SparseArraysBase'
+           - 'TensorAlgebra'
     uses: "ITensor/ITensorActions/.github/workflows/IntegrationTest.yml@main"
     with:
       localregistry: "https://github.com/ITensor/ITensorRegistry.git"
